project01/proj1style.css
body {
	background-color: #aaaaaa;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 24px;
	color: #336699;
}

td {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 24px;
	color: #000;
	text-align:left;
	padding: 10;
	vertical-align:top;
}

th {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 24px;
	color: #000000;
	background-color: #cccccc;
	text-align:left;
}

table {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 24px;
	color: #000;
	border-color: #000;
}

a {
	color: #FFF;
	text-decoration: none;
}

form {
	background-color: #CCCC99;
}

.article {
	font-family: Arial, Helvetica, sans-serif;
	color: #000;
	background-color: #f0f0ff;
	float: right;
	padding: 5px;
	vertical-align: top;
	
}

.content {
	font-family: Arial, Helvetica, sans-serif;
	color: #000;
	background-color: #fcfcfc;
	padding: 10px;
	
}

.copyright {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	color: #000;
	background-color: #f0f0f0;
	text-align: center;
	padding: 5px;
	
}

.title {
	font-family: Arial, Helvetica, sans-serif;
	font-size: xx-large;
	line-height: 30px;
	background-color: #cccccc;
	color: #000;
	padding-left: 10px;
	padding-top: 10px;
}

.subtitle {
	font-family: Arial, Helvetica, sans-serif;
	font-size: small;
	line-height: 22px;
	font-weight: normal;
	color: #666666;
	letter-spacing: .001em;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 10px;
}

.header {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 18px;
	color: #000000;
	font-weight: bold;
}

.navBar {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	font-weight: bold;
	background-color: #000;
	color: #FFF;
	border-top-width: 1px;
	border-right-width: 1px;
	border-bottom-width: 1px;
	border-left-width: 1px;
	border-top-color: #000;
	border-right-color: #000;
	border-bottom-color: #000;
	border-left-color: #000;
	margin: 0px;
}

.navLink {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	font-weight: bold;
	background-color: #DEDECA;
}

.sidebar {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 18px;
	padding: 3px;
	background-color: #FFFFFF;
}

.sidebarHeader {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 16px;
	line-height: 24px;
	color: #FFFFFF;
	background-color: #339999;
}

.sidebarFooter {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 18px;
	background-color: #CCCCCC;
}

.footer {
  font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	font-weight: bold;
	line-height: 22px;
	color: #333333;
	background-color: #CCCCCC;
}

.box1 {
	border-color: #CCCCCC #333333 #333333 #CCCCCC;
	border-width: medium;
  border-style: ridge;
}

.promo {
	font-family: "Times New Roman", Times, serif;
	color: #000033;
}

.titlebar {
	font-family: "Times New Roman", Times, serif;
	font-size: 9px;
	color: #FFFFFF;
  background-color: #336699;
}

.dingbat {
	font-family: Arial, Helvetica, sans-serif;
	background-color: #99CC99;
  color: #006666; 
	font-weight: bolder;
	font-size: medium;
}

a:hover {
	color: #000;
	background-color: #CCC;
}

input.big {
	width: 100px;
}

input.small {
	width: 50px;
}

